--- a/visualizer/CMakeLists.txt
+++ b/visualizer/CMakeLists.txt
@@ -11,4 +11,6 @@ link_directories(${PCL_LIBRARY_DIRS})
 add_definitions(${PCL_DEFINITIONS})
 
 add_executable (pcl_visualizer_demo pcl_visualizer_demo.cpp)
+add_executable (pcl_visualizer_merge merge.cc)
 target_link_libraries (pcl_visualizer_demo ${PCL_LIBRARIES})
+target_link_libraries (pcl_visualizer_merge ${PCL_LIBRARIES})
